[gd_scene load_steps=8 format=3 uid="uid://dtciitusji7kn"]

[ext_resource type="PackedScene" uid="uid://knuk1qdilmis" path="res://scenes/grid.tscn" id="1_uubdm"]
[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_woek1"]
[ext_resource type="Script" path="res://scripts/display.gd" id="3_2dkqv"]
[ext_resource type="Script" path="res://scripts/progress_bar.gd" id="4_gwx55"]
[ext_resource type="PackedScene" uid="uid://cbbhu4y4ff6ye" path="res://scenes/worldpanel.tscn" id="5_o0gvf"]
[ext_resource type="Texture2D" uid="uid://cohsvggssqult" path="res://assets/rotate.png" id="6_va4aj"]
[ext_resource type="Texture2D" uid="uid://bsau5q5jk82dt" path="res://assets/derotate.png" id="7_j0vcn"]

[node name="Game" type="Node2D"]
script = ExtResource("1_woek1")

[node name="Grid" parent="." instance=ExtResource("1_uubdm")]
position = Vector2(200, 250)
scale = Vector2(0.9, 0.9)

[node name="RotateClockwise" type="Button" parent="."]
offset_left = 327.0
offset_top = 437.0
offset_right = 400.0
offset_bottom = 510.0
scale = Vector2(0.6, 0.6)
focus_mode = 0
icon = ExtResource("6_va4aj")

[node name="RotateCounterClockwise" type="Button" parent="."]
offset_left = 271.0
offset_top = 437.0
offset_right = 344.0
offset_bottom = 510.0
scale = Vector2(0.6, 0.6)
focus_mode = 0
icon = ExtResource("7_j0vcn")

[node name="WordPanel" parent="." instance=ExtResource("5_o0gvf")]
offset_left = 10.0
offset_top = 490.0
offset_right = 390.0
offset_bottom = 610.0

[node name="Display" type="Label" parent="."]
offset_top = 20.0
offset_right = 400.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_2dkqv")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 400.0
offset_bottom = 20.0
max_value = 0.0
show_percentage = false
script = ExtResource("4_gwx55")

[connection signal="attempt_changed" from="Grid" to="Display" method="_on_grid_attempt_changed"]
[connection signal="clear" from="Grid" to="Display" method="_on_grid_clear"]
[connection signal="pressed" from="RotateClockwise" to="Grid" method="_on_rotate_clockwise_pressed"]
[connection signal="pressed" from="RotateCounterClockwise" to="Grid" method="_on_rotate_counter_clockwise_pressed"]
[connection signal="show_path" from="WordPanel" to="." method="_on_wordpanel_show_path"]
[connection signal="initials_threshold_signal" from="ProgressBar" to="Grid" method="_on_progress_bar_initials_threshold_signal"]
